# 8Queens

./: README.md  main.py  pyproject.toml  solution_finder.py  test.py  visualiser.py
